--- a/auth.html
+++ b/auth.html
@@ -119,7 +119,7 @@
     <!-- ===== LOGIN ===== -->
     <div class="auth-card" id="panelLogin">
       <h2 class="section-title" style="margin:0 0 6px;">Увійти</h2>
-      <div class="muted">Вхід (без Firebase). Дані зберігаються локально в браузері.</div>
+      <div class="muted">Введіть email та пароль.</div>
 
       <form id="loginForm" class="grid" autocomplete="on">
         <input id="loginEmail" type="email" placeholder="Email" required />
@@ -137,7 +137,7 @@
     <!-- ===== SIGNUP ===== -->
     <div class="auth-card hidden" id="panelSignup">
       <h2 class="section-title" style="margin:0 0 6px;">Створити акаунт</h2>
-      <div class="muted">Реєстрація (без Firebase). Дані зберігаються локально в браузері.</div>
+      <div class="muted">Заповніть дані для проходження реєстрації.</div>
 
       <form id="signupForm" class="grid" autocomplete="on">
         <input id="signupEmail" type="email" placeholder="Email" required />
@@ -155,12 +155,12 @@
 
         <div id="captainFields" class="grid">
           <input id="signupTeamName" type="text" placeholder="Назва команди (для капітана)" />
-          <div class="hint">Після створення команди ти отримаєш <b>joinCode</b> для інших учасників (локально).</div>
+          <div class="hint">Після створення команди ти отримаєш <b>joinCode</b> для інших учасників.</div>
         </div>
 
         <div id="memberFields" class="grid hidden">
           <input id="signupJoinCode" type="text" placeholder="Код команди (joinCode) (для учасника)" />
-          <div class="hint">Код дає капітан команди (6 символів).</div>
+          <div class="hint">Код дає капітан команди .</div>
         </div>
 
         <div class="actions">
