--- a/auth.html
+++ b/auth.html
@@ -25,28 +25,11 @@
     .muted{ color:#9ca3af; }
 
     .auth-card{
-      margin-top:14px;
       padding:16px;
       border-radius:18px;
       background:rgba(15,23,42,.9);
       border:1px solid rgba(148,163,184,.35);
       box-shadow:0 18px 40px rgba(0,0,0,.6);
-    }
-
-    .tabs{ display:flex; gap:10px; margin-top:12px; flex-wrap:wrap; }
-    .tab-btn{
-      border-radius:999px;
-      border:1px solid rgba(148,163,184,.35);
-      background:rgba(2,6,23,.55);
-      color:#e5e7eb;
-      padding:8px 14px;
-      cursor:pointer;
-      font-weight:700;
-    }
-    .tab-btn.active{
-      border-color:#facc15;
-      color:#111;
-      background:linear-gradient(135deg,#facc15,#f97316);
     }
 
     .grid{
@@ -66,7 +49,6 @@
     }
     .grid input::placeholder{ color:#6b7280; }
 
-    .row{ display:flex; gap:10px; flex-wrap:wrap; align-items:center; }
     .role-box{
       display:flex; gap:14px; flex-wrap:wrap; padding:8px 0;
       color:#e5e7eb; font-size:.95rem;
@@ -75,7 +57,6 @@
 
     .hidden{ display:none; }
 
-    /* повідомлення як у auth.js (ok/err) */
     .msg{ margin-top:10px; font-size:.9rem; }
     .msg.ok{ color:#22c55e; }
     .msg.err{ color:#ef4444; }
@@ -84,6 +65,41 @@
     .actions .btn{ border-radius:14px; padding:12px 16px; }
 
     .hr{ height:1px; background:rgba(148,163,184,.18); margin:12px 0; border-radius:99px; }
+
+    /* ===== AUTH 2 columns (Login left / Signup right) ===== */
+    .auth-2col{
+      margin-top:14px;
+      display:grid;
+      grid-template-columns: 1fr 1fr;
+      gap:14px;
+      align-items:start;
+    }
+    @media (max-width: 860px){
+      .auth-2col{ grid-template-columns: 1fr; }
+    }
+
+    .auth-col-title{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:10px;
+      margin:0 0 6px;
+    }
+    .auth-col-title .badge{
+      font-size:.75rem;
+      font-weight:900;
+      letter-spacing:.08em;
+      padding:6px 10px;
+      border-radius:999px;
+      border:1px solid rgba(148,163,184,.35);
+      background:rgba(2,6,23,.55);
+      color:#e5e7eb;
+    }
+    .auth-col-title .badge.primary{
+      border-color:#facc15;
+      background:linear-gradient(135deg,#facc15,#f97316);
+      color:#111;
+    }
   </style>
 </head>
 
@@ -95,15 +111,22 @@
       <span class="logo__mark">SC</span>
       <span class="logo__text">STOLAR CARP</span>
     </a>
+
     <nav class="nav" id="nav">
       <a href="index.html" class="nav__link">Головна</a>
       <a href="rules.html" class="nav__link">Регламент</a>
       <a href="register.html" class="nav__link">Реєстрація</a>
       <a href="live.html" class="nav__link">Live</a>
       <a href="rating.html" class="nav__link">Рейтинг</a>
+      <a href="lakes.html" class="nav__link">Водойми</a>
+      <a href="sponsors.html" class="nav__link">Спонсори</a>
+      <a href="events/index.html" class="nav__link">Архів</a>
       <a href="cabinet.html" class="nav__link">Мій кабінет</a>
     </nav>
-    <button class="burger" id="burger"><span></span><span></span><span></span></button>
+
+    <button class="burger" id="burger" type="button" aria-label="Меню" aria-expanded="false">
+      <span></span><span></span><span></span>
+    </button>
   </div>
 </header>
 
@@ -112,67 +135,73 @@
 
     <div class="auth-top">
       <div class="title-gradient" style="font-size:1.2rem; font-weight:800;">Вхід / Реєстрація</div>
+      <div class="muted" style="margin-top:6px;">Логін зліва (основний), реєстрація справа.</div>
+    </div>
 
-      <div class="tabs">
-        <button class="tab-btn active" id="tabSignup" type="button">Реєстрація</button>
-        <button class="tab-btn" id="tabLogin" type="button">Вхід</button>
+    <div class="auth-2col">
+
+      <!-- ===== LEFT: LOGIN (основний) ===== -->
+      <div class="auth-card" id="panelLogin">
+        <div class="auth-col-title">
+          <h2 class="section-title" style="margin:0;">Увійти</h2>
+          <span class="badge primary">ОСНОВНИЙ</span>
+        </div>
+        <div class="muted">Вхід для учасників (email/пароль).</div>
+
+        <form id="loginForm" class="grid" autocomplete="on">
+          <input id="loginEmail" type="email" placeholder="Email" required />
+          <input id="loginPassword" type="password" placeholder="Пароль" required />
+
+          <div class="actions">
+            <button class="btn btn--accent" id="loginBtn" type="submit">Увійти</button>
+            <a class="btn btn--primary" href="index.html">На головну</a>
+          </div>
+
+          <div class="msg" id="loginMsg"></div>
+        </form>
       </div>
-    </div>
 
-    <!-- ===== SIGNUP ===== -->
-    <div class="auth-card" id="panelSignup">
-      <h2 class="section-title" style="margin:0 0 6px;">Створити акаунт</h2>
-      <div class="muted">Заповни дані. Капітан створює команду, учасник приєднується по коду.</div>
-
-      <form id="signupForm" class="grid" autocomplete="on">
-        <input id="signupEmail" type="email" placeholder="Email" required />
-        <input id="signupPassword" type="password" placeholder="Пароль (мін. 6 символів)" required />
-        <input id="signupFullName" type="text" placeholder="ПІБ" required />
-        <input id="signupPhone" type="text" placeholder="Телефон" required />
-        <input id="signupCity" type="text" placeholder="Місто" required />
-
-        <div class="hr"></div>
-
-        <div class="role-box">
-          <label><input type="radio" name="signupRole" value="captain" checked> Капітан</label>
-          <label><input type="radio" name="signupRole" value="member"> Учасник</label>
+      <!-- ===== RIGHT: SIGNUP ===== -->
+      <div class="auth-card" id="panelSignup">
+        <div class="auth-col-title">
+          <h2 class="section-title" style="margin:0;">Створити акаунт</h2>
+          <span class="badge">РЕЄСТРАЦІЯ</span>
         </div>
+        <div class="muted">Капітан створює команду, учасник приєднується по коду.</div>
 
-        <div id="captainFields" class="grid">
-          <input id="signupTeamName" type="text" placeholder="Назва команди (для капітана)" />
-          <div class="hint">Після створення команди ти отримаєш <b>joinCode</b> для інших учасників.</div>
-        </div>
+        <form id="signupForm" class="grid" autocomplete="on">
+          <input id="signupEmail" type="email" placeholder="Email" required />
+          <input id="signupPassword" type="password" placeholder="Пароль (мін. 6 символів)" required />
+          <input id="signupFullName" type="text" placeholder="ПІБ" required />
+          <input id="signupPhone" type="text" placeholder="Телефон" required />
+          <input id="signupCity" type="text" placeholder="Місто" required />
 
-        <div id="memberFields" class="grid hidden">
-          <input id="signupJoinCode" type="text" placeholder="Код команди (joinCode) (для учасника)" />
-          <div class="hint">Код дає капітан команди (6 символів).</div>
-        </div>
+          <div class="hr"></div>
 
-        <div class="actions">
-          <button class="btn btn--accent" id="signupBtn" type="submit">Зареєструватись</button>
-          <a class="btn btn--primary" href="index.html">На головну</a>
-        </div>
+          <div class="role-box">
+            <label><input type="radio" name="signupRole" value="captain" checked> Капітан</label>
+            <label><input type="radio" name="signupRole" value="member"> Учасник</label>
+          </div>
 
-        <div class="msg" id="signupMsg"></div>
-      </form>
-    </div>
+          <div id="captainFields" class="grid">
+            <input id="signupTeamName" type="text" placeholder="Назва команди (для капітана)" />
+            <div class="hint">Після створення команди ти отримаєш <b>joinCode</b> для інших учасників.</div>
+          </div>
 
-    <!-- ===== LOGIN ===== -->
-    <div class="auth-card hidden" id="panelLogin">
-      <h2 class="section-title" style="margin:0 0 6px;">Увійти</h2>
-      <div class="muted">Вхід для учасників (email/пароль).</div>
+          <div id="memberFields" class="grid hidden">
+            <input id="signupJoinCode" type="text" placeholder="Код команди (joinCode) (для учасника)" />
+            <div class="hint">Код дає капітан команди (6 символів).</div>
+          </div>
 
-      <form id="loginForm" class="grid" autocomplete="on">
-        <input id="loginEmail" type="email" placeholder="Email" required />
-        <input id="loginPassword" type="password" placeholder="Пароль" required />
+          <div class="actions">
+            <button class="btn btn--accent" id="signupBtn" type="submit">Зареєструватись</button>
+            <a class="btn btn--primary" href="index.html">На головну</a>
+          </div>
 
-        <div class="actions">
-          <button class="btn btn--accent" id="loginBtn" type="submit">Увійти</button>
-          <a class="btn btn--primary" href="index.html">На головну</a>
-        </div>
+          <div class="msg" id="signupMsg"></div>
+        </form>
+      </div>
 
-        <div class="msg" id="loginMsg"></div>
-      </form>
     </div>
 
   </section>
@@ -191,45 +220,31 @@
 <script src="assets/js/auth.js"></script>
 
 <script>
-  // перемикач табів + показ полів captain/member
+  // captain/member fields toggle
   (function(){
-    const tabSignup = document.getElementById("tabSignup");
-    const tabLogin  = document.getElementById("tabLogin");
-    const panelSignup = document.getElementById("panelSignup");
-    const panelLogin  = document.getElementById("panelLogin");
-
     const captainFields = document.getElementById("captainFields");
     const memberFields  = document.getElementById("memberFields");
 
-    function open(which){
-      if(which === "signup"){
-        tabSignup.classList.add("active");
-        tabLogin.classList.remove("active");
-        panelSignup.classList.remove("hidden");
-        panelLogin.classList.add("hidden");
+    function updateRoleFields(){
+      const v = document.querySelector('input[name="signupRole"]:checked')?.value || "captain";
+      if (v === "captain"){
+        captainFields?.classList.remove("hidden");
+        memberFields?.classList.add("hidden");
       } else {
-        tabLogin.classList.add("active");
-        tabSignup.classList.remove("active");
-        panelLogin.classList.remove("hidden");
-        panelSignup.classList.add("hidden");
+        memberFields?.classList.remove("hidden");
+        captainFields?.classList.add("hidden");
       }
     }
 
-    tabSignup?.addEventListener("click", ()=>open("signup"));
-    tabLogin?.addEventListener("click", ()=>open("login"));
-
     document.querySelectorAll('input[name="signupRole"]').forEach(r=>{
-      r.addEventListener("change", ()=>{
-        const v = document.querySelector('input[name="signupRole"]:checked')?.value || "captain";
-        if(v === "captain"){
-          captainFields?.classList.remove("hidden");
-          memberFields?.classList.add("hidden");
-        } else {
-          memberFields?.classList.remove("hidden");
-          captainFields?.classList.add("hidden");
-        }
-      });
+      r.addEventListener("change", updateRoleFields);
     });
+
+    updateRoleFields();
+
+    // focus login email (бо вхід основний)
+    const loginEmail = document.getElementById("loginEmail");
+    if (loginEmail) setTimeout(()=>loginEmail.focus(), 250);
   })();
 </script>
 
