--- a/auth.html
+++ b/auth.html
@@ -10,7 +10,7 @@
 
   <style>
     body{ background: radial-gradient(circle at top,#111827 0,#020617 55%); }
-    .auth-wrap{ max-width:1100px; margin:0 auto; padding:22px 0 70px; }
+    .auth-wrap{ max-width:980px; margin:0 auto; padding:22px 0 70px; }
 
     .auth-top{
       padding:14px 16px; border-radius:18px;
@@ -20,23 +20,29 @@
     }
     .muted{ color:#9ca3af; }
 
-    .auth-2col{
-      margin-top:14px;
-      display:grid;
-      grid-template-columns: 1fr 1fr;
-      gap:14px;
-      align-items:start;
-    }
-    @media (max-width: 900px){
-      .auth-2col{ grid-template-columns: 1fr; }
-    }
-
     .auth-card{
+      margin-top:14px;
       padding:16px;
       border-radius:18px;
       background:rgba(15,23,42,.9);
       border:1px solid rgba(148,163,184,.35);
       box-shadow:0 18px 40px rgba(0,0,0,.6);
+    }
+
+    .tabs{ display:flex; gap:10px; margin-top:12px; flex-wrap:wrap; }
+    .tab-btn{
+      border-radius:999px;
+      border:1px solid rgba(148,163,184,.35);
+      background:rgba(2,6,23,.55);
+      color:#e5e7eb;
+      padding:8px 14px;
+      cursor:pointer;
+      font-weight:700;
+    }
+    .tab-btn.active{
+      border-color:#facc15;
+      color:#111;
+      background:linear-gradient(135deg,#facc15,#f97316);
     }
 
     .grid{
@@ -72,30 +78,6 @@
     .actions .btn{ border-radius:14px; padding:12px 16px; }
 
     .hr{ height:1px; background:rgba(148,163,184,.18); margin:12px 0; border-radius:99px; }
-
-    .col-head{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap:12px;
-      margin:0 0 6px;
-    }
-    .badge{
-      font-size:.75rem;
-      font-weight:900;
-      letter-spacing:.08em;
-      padding:6px 10px;
-      border-radius:999px;
-      border:1px solid rgba(148,163,184,.35);
-      background:rgba(2,6,23,.55);
-      color:#e5e7eb;
-      user-select:none;
-    }
-    .badge.primary{
-      border-color:#facc15;
-      background:linear-gradient(135deg,#facc15,#f97316);
-      color:#111;
-    }
   </style>
 </head>
 
@@ -108,7 +90,7 @@
       <span class="logo__text">STOLAR CARP</span>
     </a>
 
-    <!-- ✅ Повне меню як ти дав -->
+    <!-- ✅ ПОВНЕ меню -->
     <nav class="nav" id="nav">
       <a href="index.html" class="nav__link">Головна</a>
       <a href="rules.html" class="nav__link">Регламент</a>
@@ -132,73 +114,69 @@
 
     <div class="auth-top">
       <div class="title-gradient" style="font-size:1.2rem; font-weight:800;">Вхід / Реєстрація</div>
-      <div class="muted" style="margin-top:6px;">Вхід зліва, реєстрація справа. Бургер працює з <b>config.js</b>.</div>
+
+      <!-- ✅ ТАБИ як у твоєму прикладі:
+           ВХІД зліва, РЕЄСТРАЦІЯ справа -->
+      <div class="tabs">
+        <button class="tab-btn active" id="tabLogin" type="button">Вхід</button>
+        <button class="tab-btn" id="tabSignup" type="button">Реєстрація</button>
+      </div>
     </div>
 
-    <div class="auth-2col">
+    <!-- ===== LOGIN ===== -->
+    <div class="auth-card" id="panelLogin">
+      <h2 class="section-title" style="margin:0 0 6px;">Увійти</h2>
+      <div class="muted">Введіть email та пароль.</div>
 
-      <!-- ===== LEFT: LOGIN (основний) ===== -->
-      <div class="auth-card">
-        <div class="col-head">
-          <h2 class="section-title" style="margin:0;">Увійти</h2>
-          <span class="badge primary">ОСНОВНИЙ</span>
+      <form id="loginForm" class="grid" autocomplete="on">
+        <input id="loginEmail" type="email" placeholder="Email" required />
+        <input id="loginPassword" type="password" placeholder="Пароль" required />
+
+        <div class="actions">
+          <button class="btn btn--accent" id="loginBtn" type="submit">Увійти</button>
+          <a class="btn btn--primary" href="index.html">На головну</a>
         </div>
-        <div class="muted">Вхід для учасників (email/пароль).</div>
 
-        <form id="loginForm" class="grid" autocomplete="on">
-          <input id="loginEmail" type="email" placeholder="Email" required />
-          <input id="loginPassword" type="password" placeholder="Пароль" required />
+        <div class="msg" id="loginMsg"></div>
+      </form>
+    </div>
 
-          <div class="actions">
-            <button class="btn btn--accent" id="loginBtn" type="submit">Увійти</button>
-            <a class="btn btn--primary" href="index.html">На головну</a>
-          </div>
+    <!-- ===== SIGNUP ===== -->
+    <div class="auth-card hidden" id="panelSignup">
+      <h2 class="section-title" style="margin:0 0 6px;">Створити акаунт</h2>
+      <div class="muted">Капітан створює команду, учасник приєднується по коду.</div>
 
-          <div class="msg" id="loginMsg"></div>
-        </form>
-      </div>
+      <form id="signupForm" class="grid" autocomplete="on">
+        <input id="signupEmail" type="email" placeholder="Email" required />
+        <input id="signupPassword" type="password" placeholder="Пароль (мін. 6 символів)" required />
+        <input id="signupFullName" type="text" placeholder="ПІБ" required />
+        <input id="signupPhone" type="text" placeholder="Телефон" required />
+        <input id="signupCity" type="text" placeholder="Місто" required />
 
-      <!-- ===== RIGHT: SIGNUP ===== -->
-      <div class="auth-card">
-        <div class="col-head">
-          <h2 class="section-title" style="margin:0;">Створити акаунт</h2>
-          <span class="badge">РЕЄСТРАЦІЯ</span>
+        <div class="hr"></div>
+
+        <div class="role-box">
+          <label><input type="radio" name="signupRole" value="captain" checked> Капітан</label>
+          <label><input type="radio" name="signupRole" value="member"> Учасник</label>
         </div>
-        <div class="muted">Капітан створює команду, учасник приєднується по коду.</div>
 
-        <form id="signupForm" class="grid" autocomplete="on">
-          <input id="signupEmail" type="email" placeholder="Email" required />
-          <input id="signupPassword" type="password" placeholder="Пароль (мін. 6 символів)" required />
-          <input id="signupFullName" type="text" placeholder="ПІБ" required />
-          <input id="signupPhone" type="text" placeholder="Телефон" required />
-          <input id="signupCity" type="text" placeholder="Місто" required />
+        <div id="captainFields" class="grid">
+          <input id="signupTeamName" type="text" placeholder="Назва команди (для капітана)" />
+          <div class="hint">Після створення команди ти отримаєш <b>joinCode</b> для інших учасників.</div>
+        </div>
 
-          <div class="hr"></div>
+        <div id="memberFields" class="grid hidden">
+          <input id="signupJoinCode" type="text" placeholder="Код команди (joinCode) (для учасника)" />
+          <div class="hint">Код дає капітан команди (6 символів).</div>
+        </div>
 
-          <div class="role-box">
-            <label><input type="radio" name="signupRole" value="captain" checked> Капітан</label>
-            <label><input type="radio" name="signupRole" value="member"> Учасник</label>
-          </div>
+        <div class="actions">
+          <button class="btn btn--accent" id="signupBtn" type="submit">Зареєструватись</button>
+          <a class="btn btn--primary" href="index.html">На головну</a>
+        </div>
 
-          <div id="captainFields" class="grid">
-            <input id="signupTeamName" type="text" placeholder="Назва команди (для капітана)" />
-            <div class="hint">Після створення команди ти отримаєш <b>joinCode</b> для інших учасників.</div>
-          </div>
-
-          <div id="memberFields" class="grid hidden">
-            <input id="signupJoinCode" type="text" placeholder="Код команди (joinCode) (для учасника)" />
-            <div class="hint">Код дає капітан команди (6 символів).</div>
-          </div>
-
-          <div class="actions">
-            <button class="btn btn--accent" id="signupBtn" type="submit">Зареєструватись</button>
-            <a class="btn btn--primary" href="index.html">На головну</a>
-          </div>
-
-          <div class="msg" id="signupMsg"></div>
-        </form>
-      </div>
-
+        <div class="msg" id="signupMsg"></div>
+      </form>
     </div>
 
   </section>
@@ -213,37 +191,11 @@
 <!-- init -->
 <script src="assets/js/firebase-init.js"></script>
 
-<!-- auth logic (твій) -->
+<!-- твій Firebase auth logic -->
 <script src="assets/js/auth.js"></script>
 
-<script>
-  // ✅ Показ полів captain/member (бо табів вже нема)
-  (function(){
-    const captainFields = document.getElementById("captainFields");
-    const memberFields  = document.getElementById("memberFields");
-
-    function updateRoleFields(){
-      const v = document.querySelector('input[name="signupRole"]:checked')?.value || "captain";
-      if (v === "captain"){
-        captainFields?.classList.remove("hidden");
-        memberFields?.classList.add("hidden");
-      } else {
-        memberFields?.classList.remove("hidden");
-        captainFields?.classList.add("hidden");
-      }
-    }
-
-    document.querySelectorAll('input[name="signupRole"]').forEach(r=>{
-      r.addEventListener("change", updateRoleFields);
-    });
-
-    updateRoleFields();
-
-    // фокус на логін (бо він основний)
-    const loginEmail = document.getElementById("loginEmail");
-    if (loginEmail) setTimeout(()=>loginEmail.focus(), 250);
-  })();
-</script>
+<!-- ✅ таби + поля captain/member -->
+<script src="assets/js/auth-tabs.js"></script>
 
 </body>
 </html>
