--- a/participation.html
+++ b/participation.html
@@ -123,6 +123,7 @@
 </head>
 
 <body>
+  <div class="statusbar-fix"></div>
   <header class="header">
     <div class="headerInner">
       <a href="cabinet.html" class="btnBack">← Назад</a>
